# NotificationSystem

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 273d776fb757_initial.py
environment/: .env.example
src/: celery_app.py  db.py  main.py  settings.py
src/adapters/notifications/: api.py  schemas.py
src/notifications_transport/: transports.py
src/repositories/: __init__.py
src/repositories/core/: base_exception.py  base_model.py  base_repository_model.py  transport.py
src/repositories/core/exceptions/: db_exceptions.py
src/repositories/notifications/: enum.py  model.py  repository.py
src/repositories/users/: enum.py  model.py  repository.py
src/repositories/utils/: db_error_mapper.py  utils.py
src/scripts/: add_users.py
src/services/: notifications.py
src/tasks/: notifications.py
