[project]
name = "notificationsystem"
version = "1.0.0"
description = "technical task"
authors = [
    {name = "Zhukov Artem",email = "zo.sahaal.13@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.119.0,<0.120.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic (>=2.12.1,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uuid6 (>=2025.0.1,<2026.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "ruff (>=0.14.0,<0.15.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "pytest-factoryboy (>=2.8.1,<3.0.0)",
    "faker (>=37.12.0,<38.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "testcontainers[postgresql] (>=4.13.2,<5.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]
